# dflow_refiner

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-on-dockerhub.yml  publish-on-pypi.yml
dflow_refiner/: __init__.py  ase_gaussian_io.py  build.py  calculators.py  inputGen.py  miniAutoSteper_func.py  miniAutoSteper_op.py  parser.py  refiners.py  tools.py  tutorial_VASP_op.py
examples/: workflow.py
examples/conformation_search/: README.md  test_conf_search.py
examples/conformation_search/output_files/: def2tzvpp_info.pickle
examples/conformation_search_test/output_files/: 6-311G-d-p_info.pickle
examples/miniAutoSteper/test_miniAutoSteper/: C60_000001812opted.xyz  test_miniAutoSteper.py
examples/unit_test/BuildWithAux_test/: test_build_with_aux.py
examples/unit_test/sub_path_test/: simple_with_sub_path.py
examples/with_Sub_path/: simple_with_sub_path.py
examples/without/: test_xtb_refiner.py
examples/without/input_files/: temp.py
examples/without/output_files/: info.pickle
refiner/: __init__.py  hello.py
refiner_gym/miniAutoSteper/: README.md  test_global_name.py
refiner_gym/miniAutoSteper/test_prescan/: test_customized_ASE_PreScan.py
tests/: test_hello.py
tests/data/: foo.txt
tutorial_VASP/: README.md  simple_prepare_xyz.py  test_components_op.py  test_refiner.py
tutorial_VASP/input_files/public_files/: KPOINTS
tutorial_VASP/input_files/xyz/: bct.xyz  fcc.xyz
unit_test/: README.md  test_steps_slc_in_para.py
unit_test/ASE_PreScan_test/: test_ASE_PreScan.py
unit_test/BuildWithAux_test/: test_build_with_aux.py
unit_test/Gau_Refiner_test/basic/: test_gau_refiner.py
(+920 files in other folders)
