[project]
name = "dflow_refiner"
dynamic = ["version"]
description = "Automated refinement procedure integrating multi-calculators for high-throughput molecular screening."
authors = [{name = "franklalalala", email = "1660810667@qq.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha"
]
keywords = ["dflow", "OP"]
requires-python = ">=3.6"
dependencies = [
    "importlib-metadata",
    "pydflow>=1.0",
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[project.urls]
Source = "https://github.com/franklalalala/dflow_refiner"
